--- a/frontend/src/style/LoginPage.css
+++ b/frontend/src/style/LoginPage.css
@@ -1,113 +1,21 @@
-/* .main-container-login {
-    
-    background-color: #0D1117;
+
+.main-container-login {
+    font-family: "Poppins", sans-serif;
+    display: flex;
     height: 100vh;
-    font-family:Arial, Helvetica, sans-serif;
 }
 
-.nav-container {
-    display: flex;
-    justify-content: space-between;
-   
-    background-color: #0D1117;
-}
-
-.logo-container {
-  
-    padding: 5px;
-    cursor: pointer;
-    position: relative;
-}
-
-.last-container {
-    display: flex;
-    align-items: center;
-    margin-right: 50px;
-}
-
-.last-container ul {
-    display: flex;
-}
-
-.last-container ul li {
-    display: inline-block;
-    list-style: none;
-    
-    width: 98px;
-    height: 38px;
+.login-image-container{
+    width: 70%;
+    /* border: 1px solid black; */
+    background-color: #fafafa;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 3px;
-
-
-}
-
-.last-container ul li a {
-    text-decoration: none;
-    font-size: 20px;
-    width: 80px;
-    padding: 5px;
-    color: whitesmoke;
-    position: relative;
-
-}
-
-.last-container ul li a:hover {
-    cursor: pointer;
-    color: rgba(245, 245, 220, 0.753);
-}
-
-.menu-container {
-    display: flex;
-    align-items: center;
-}
-
-.menu {
-    display: none;
-    height: 40px;
-    width: 55px;
-    color: aliceblue;
-    cursor: pointer;
-    margin: 20px;
-   
-}
-
-.forgot{
-    display: flex;
-    
-    justify-content: flex-end;
-    margin-bottom: 5px;
-}
-
-.toggle {
-    display: none;
-}
-
-ul li {
-    list-style: none;
-    margin: 4px 0px;
-}
-
-.toggle li a {
-    text-decoration: none;
-    font-size: 15px;
-} */
-
-.main-container-login {
-    
-    /* background-color: #0D1117; */
-    background-color: whitesmoke;
-    height: 100vh;
-    font-family: "Poppins", sans-serif;
 }
 
 nav{
 	width: 100%;
-	/* height: 80px; */
-	/* background:#0D1117; */
-    /* background-color: rgb(250, 245, 245);
-    border-bottom: 1px solid rgb(179, 175, 175); */
     border-bottom: 1px solid rgb(179, 175, 175);
     padding: 2px 0;
 }
@@ -167,22 +75,17 @@ nav ul li a:hover{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
     padding: 10px;
+    background-color: #ffffff;
 }
 
 
 .form-container {
-    margin-top: 25px;
+    margin-top: 20px;
     width: 400px;
     height: 265px;
     font-family: "Poppins", sans-serif;
-    /* background: rgba(170, 165, 165, 0.514);
     border-radius: 10px;
-    border: 1px solid rgba(77, 74, 74, 0.616); */
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 5px 2px 20px rgb(153, 151, 151);
 
 }
 
@@ -208,9 +111,9 @@ form {
     margin-top: 5px;
     border-radius: 5px;
     border: none;
-    /* background-color: #0D1117; */
+    background-color: #f7f7f8;
     color: #0D1117;
-    border: 1px solid rgb(179, 175, 175);
+    /* border: 1px solid rgb(179, 175, 175); */
 }
 
 
@@ -226,9 +129,6 @@ label {
 .button {
     display: flex;
     justify-content: center;
-    /* border: 1px solid white; */
-    /* margin-bottom:15px ; */
-    /* position: sticky; */
 }
 
 .Link{
@@ -241,14 +141,14 @@ label {
    
     height: 35px;
     border-radius: 8px;
-    background-color: rgb(31, 150, 15);
+    background-color: #605BFF;
     color: aliceblue;
     border: none;
     width: 100%;
 }
 
 .login:hover {
-    background-color: rgb(11, 134, 32);
+    background-color: #5651e2
 }
 
 #check:checked~ul {
@@ -268,6 +168,7 @@ label {
 @media (max-width:750px) {
     .menu {
         display: block;
+        color: #0D1117;
     }
 
 
@@ -300,7 +201,7 @@ label {
 	nav ul{
 		width: 100%;
 		height: 100vh;
-		background: #0D1117;
+		background: #bebfc2;
 		position: fixed;
 		top:80px;
 		left: -100%;
